# alertiq

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  setup.py
src/: __init__.py  config.py  database.py  email_reader.py  email_sender.py  llm_analyzer.py  main.py  models.py  processor.py  scheduler.py
tests/: conftest.py  test_config.py  test_database.py  test_llm_analyzer.py  test_models.py
